[package]
name = "actix-rl"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
actix-web = { version = "4" }
chrono = { version = "0.4" }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"]}
lazy_static = { version = "1.5.0" }
