[package]
name = "actix-rl"
version = "0.2.1"
edition = "2021"
authors = ["caojen <caojen@mail2.sysu.edu.cn>"]
description = "`actix-rl` is a RateLimit middleware for the `actix-web` library."
keywords = ["rate-limit", "actix-web"]
license = "MIT"
repository = "https://github.com/caojen/actix-rl"

[features]
redis-store = ["redis"]

[dependencies]
async-trait = { version = "0.1" }
actix-web = { version = "4" }
chrono = { version = "0.4" }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["sync"]}
redis = { version = "0.25", features = ["tokio-comp", "tokio-rustls-comp", "aio"], optional = true }

[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"]}
lazy_static = { version = "1.5.0" }
